# jim

./: .gitignore  AGENTS-ON-THE-BUS.md  ATTRIBUTION.md  BEVY_0_19.md  CHANNELS.md  CLAUDE.md  Cargo.toml  DATAFLOW.md  README.md  channel.mcp.json.example  rust-toolchain.toml
.github/workflows/: macos.yml
channel-plugin/: managed-settings.json
channel-plugin/.claude-plugin/: marketplace.json
channel-plugin/jim/: .mcp.json
channel-plugin/jim/.claude-plugin/: plugin.json
crates/claude-bus-bevy/: Cargo.toml
crates/claude-bus/src/: client.rs
crates/claude-context-bars/: Cargo.toml
crates/claude-context-bars/src/: main.rs
crates/claude-event-logger/src/: main.rs
crates/diff-bevy/src/: lib.rs
crates/diff-core/src/: lib.rs
crates/feathers-demo/: Cargo.toml
crates/feathers-demo/src/: main.rs
crates/flame-bevy/: Cargo.toml
crates/flame-bevy/src/: lib.rs
crates/flame-format-jimtrace/: Cargo.toml
crates/flame-format-jimtrace/src/: lib.rs
crates/flame-render/: Cargo.toml
crates/flame-render/src/: lib.rs  renderer.rs
crates/flame-render/tests/: aggregate.rs  render_aggregate.rs
crates/inference-bevy/: Cargo.toml
crates/jim-app/: Cargo.toml
crates/jim-app/docs/: cube-tilt-postmortem.md
crates/jim-app/src/: actions.rs  agent.rs  canvas.rs  canvas_pane.rs  claude_events_pane.rs  command_palette.rs  context_menu.rs  cube.rs  debug_bar.rs  diagnostics.rs  drawer.rs  expose.rs  fps.rs  graph_view.rs  inbox.rs  inference_dispatch.rs  inferences_pane.rs  ipc.rs  ipc_stats.rs  issues_pane.rs  lib.rs  main.rs  pane_annotation.rs  projects.rs  radial.rs  render_trace.rs  run_button.rs  screenshot_consent.rs  tools.rs  whiteboard_bg.rs  window_geometry.rs  workflow_graph.rs
crates/jim-app/src/dictation/: mod.rs  whisper.rs
crates/jim-app/tests/: daemon_e2e.rs  paste_repro.rs  vt_replay.rs
crates/jim-app/tests/common/: mod.rs
crates/jim-bus/: Cargo.toml
crates/jim-bus/src/: client.rs  daemon.rs  lib.rs  proto.rs
crates/jim-bus/tests/: bus_e2e.rs
crates/jim-daemon/: Cargo.toml
crates/jim-daemon/src/: daemon.rs  lib.rs
crates/jim-diff/: Cargo.toml
crates/jim-diff/src/: lib.rs
crates/jim-editor/: Cargo.toml
crates/jim-emacs/: Cargo.toml
crates/jim-emacs/src/: lib.rs  native.rs
crates/jim-flame/: Cargo.toml
crates/jim-flame/src/: lib.rs
crates/jim-git/: Cargo.toml
crates/jim-git/src/: lib.rs
crates/jim-inference/: Cargo.toml
crates/jim-lsp/: Cargo.toml
crates/jim-lsp/src/: daemon.rs  lib.rs  lsp.rs
crates/jim-pane/: Cargo.toml
crates/jim-review/: Cargo.toml
crates/jim-review/src/: lib.rs
crates/jim-style/: Cargo.toml
crates/jim-style/assets/themes/: atelier.ft
crates/jim-style/src/: chrome_theme.rs  dynamic.rs  fonts.rs  lib.rs  oklab.rs  presets.rs  script_bridge.rs  state.rs  theme.rs  theme_bridge.rs
crates/jim-terminal/: Cargo.toml
crates/jim-terminal/src/: atlas.rs  daemon_client.rs  lib.rs  selection.rs  worker.rs
crates/jim-terminal/tests/: mouse_encoding.rs
crates/jim-whiteboard/: Cargo.toml
crates/jim-whiteboard/src/: buttons.rs  island.rs  lib.rs  measurer.rs  pane.rs  render.rs  toolbar.rs
crates/jim-widget/: AUTHORING.md  Cargo.toml  GLAZE_COMPONENTS.md
crates/jim-widget/assets/chess/: ATTRIBUTION.md
crates/jim-widget/assets/garden/: CREDITS.md
crates/jim-widget/src/: anim.rs  audio.rs  funct_widget.rs  glaze_material.rs  glaze_style.rs  layout.rs  lib.rs  msgbus.rs  playback.rs  protocol.rs  render.rs  rhai_widget.rs  script_widget.rs  subprocess.rs  syntax.rs  system_font.rs  text_fallback.rs
crates/jim-widget/tests/: muse_pack.rs
crates/jim-widget/widgets/: .gitignore  ai_work.ft  audio_recorder.ft  bench.ft  branches.ft  bus_ping.ft  bus_pong.ft  claude-sessions.ft  claude-usage.ft  clip_lab.ft  controls_demo.ft  datalog_browser.ft  datalog_query.ft  dev_panel.ft  df.ft  df_glyphtest.ft  df_view_bar.ft  df_view_heatmap.ft  df_view_line.ft  df_view_multiline.ft  df_view_stat.ft  df_view_table.ft  df_view_vbars.ft  diff.ft  dlide_editor.ft  dlide_history.ft  dlide_results.ft  dlide_schema.ft  editor_demo.ft  editor_ro_demo.ft  file_open.ft  garden.ft  git.ft  hello.ft  http.ft  ipc_monitor.ft  lsp_explorer.ft  lsp_symbol.ft  markdown.ft  podcast.ft  (+13 more)
crates/jimctl/: Cargo.toml
crates/jimctl/src/: agent_bus.rs  cmd_agent.rs  cmd_channel.rs  cmd_close.rs  cmd_codex.rs  cmd_dock.rs  cmd_git.rs  cmd_inbox.rs  cmd_inject.rs  cmd_issue.rs  cmd_lsp.rs  cmd_mcp.rs  cmd_memory.rs  cmd_msg.rs  cmd_open.rs  cmd_pi.rs  cmd_project.rs  cmd_review.rs  cmd_suggest.rs  cmd_trace.rs  cmd_widget.rs  main.rs  project_resolve.rs
crates/markdown-core/: Cargo.toml  SAMPLE.md
crates/markdown-core/src/: lib.rs
crates/tbinject/: Cargo.toml
crates/whiteboard-core/: Cargo.toml
crates/whiteboard-core/examples/: gen_sample.rs
crates/whiteboard-core/oracle/: .gitignore  README.md  build.sh  entry.mjs  gen.mjs  package-lock.json  package.json  patch-exports.mjs
crates/whiteboard-core/src/: editor.rs
crates/whiteboard-core/src/element/: binding.rs  interactive_binding.rs  kind.rs  mod.rs
crates/whiteboard-core/src/geometry/: bounds.rs  mod.rs
crates/whiteboard-core/src/interaction/: state.rs  tools.rs
crates/whiteboard-core/src/io/: excalidraw.rs
crates/whiteboard-core/src/render/: tessellate.rs
crates/whiteboard-core/src/scene/: clipboard.rs  query.rs
crates/whiteboard-core/src/shape/: rough_gen.rs
crates/whiteboard-core/tests/: arrow_bind_gestures.rs  arrow_follow_select.rs  arrow_vertex_drag.rs  arrowhead_snap.rs  interaction_lifecycle.rs  oracle_parity.rs  overlay_no_box_for_arrow.rs  wiring.rs
crates/whiteboard-core/tests/oracle/: binding.json  bounds.json  elbow.json
crates/widget-bevy/: AUTHORING.md  Cargo.toml
docs/: GLAZE.md  glaze-explainer.html
integrations/pi/: jim-bus.ts
scripts/: bevy019_text_migrate.py  channel-setup.sh  demo.sh  dev-restart.sh  df-dashboard.sh  github-workspace.sh  make-bundle.sh  setup-signing.sh  website-blog-dashboard.sh
tools/inbox-channel/: README.md
waveform-poc/: Cargo.toml  DESIGN.md
waveform-poc/src/: main.rs
(+47 files in other folders)
