# Standalone, DETACHED from the jim-editor workspace (empty [workspace] table)
# so it builds on its own and doesn't drag in the whole repo / libghostty dylib.
[package]
name = "waveform-poc"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
serde_json = "1"
minifb = "0.27"

[profile.release]
opt-level = 2
