[package]
name = "feathers-demo"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

# Isolated exploration crate for Bevy 0.19's `bevy_feathers` widget set.
# Built only via `-p feathers-demo`; not in workspace default-members, so it
# never changes the feature set the migrated `jim` app compiles with. Edition
# 2024 because the vendored upstream gallery uses a let-chain.
[dependencies]
# Bevy's `default` is ["2d","3d","ui","audio"], but stable `bevy_audio 0.19.0`
# was never published (only RCs) — same reason the app uses default-features =
# false. So enumerate the UI stack explicitly, minus audio/3d, plus feathers.
bevy = { version = "0.19", default-features = false, features = [
    "2d",
    "ui",
    "default_font",
    "system_font_discovery",
    "bevy_feathers",
    "x11",
    "wayland",
] }

[[bin]]
name = "feathers_demo"
path = "src/main.rs"
