[package]
name = "jim_app"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
jim_editor = { path = "../jim-editor" }
editor_core = { path = "../editor-core" }
jim_pane = { path = "../jim-pane" }
jim_style = { path = "../jim-style" }
jim_daemon = { path = "../jim-daemon" }
jim_terminal = { path = "../jim-terminal" }
jim_widget = { path = "../jim-widget" }
claude-bus-bevy = { path = "../claude-bus-bevy" }
claude-bus = { path = "../claude-bus" }
jim_inference = { path = "../jim-inference" }
# Native file dialog for Cmd+O. Synchronous on macOS — opens the
# system NSOpenPanel on the calling (main) thread.
rfd = "0.15"
nix = { version = "0.31", features = ["term", "fs", "signal", "process", "user", "ioctl", "poll"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Hot-reloadable runtime tuning for the project-prism (cube.rs):
# ~/.jim/cube.rhai is evaluated to a params map.
rhai = { version = "1.21", features = ["sync"] }
libc = "0.2"
# File-watching for garden sprite hot reload — picks up edits to text
# files under ~/.jim/garden-art/ and rebuilds the relevant
# Image assets without restarting the app.
notify = { version = "8", default-features = false, features = ["macos_fsevent"] }
# PNG decoding for the embedded garden sprite sheet (CC0 OpenGameArt
# "Flowers" plant pack, 78 12x24 plants on a 936x24 strip).
image = { version = "0.25", default-features = false, features = ["png"] }
bevy = { version = "0.18", default-features = false, features = [
    "2d",
    # Real perspective 3D (Camera3d + PBR meshes + StandardMaterial),
    # used by the project-prism "cube" mode (src/cube.rs) to texture each
    # project's live render target onto a face of a rotating N-gon prism.
    "3d",
    "x11",
    "wayland",
    # Hot-reload shaders / textures / any asset when their source file
    # changes on disk. Without this, AssetServer ignores file changes
    # and the live-edit workflow doesn't work.
    "file_watcher",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = ["NSDockTile", "NSWorkspace", "NSRunningApplication", "NSEvent", "libc"] }
objc2-foundation = "0.2"
# Obj-C block support, for the AVCaptureDevice mic-access completion
# handler (see request_microphone_access). 0.5 matches objc2 0.5.
block2 = "0.5"

[lib]
name = "jim_app"
path = "src/lib.rs"

[[bin]]
name = "jim"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"
# Terminal integration tests (daemon_e2e, paste_repro, vt_replay) exercise
# the terminal widget crate's vt / pty / worker / daemon_client modules.
jim_terminal = { path = "../jim-terminal" }
# vt_replay drives `libghostty_vt::Terminal` directly.
libghostty-vt = "0.1.1"
