[package]
name = "jim_daemon"
version = "0.1.0"
edition = "2024"
license.workspace = true

# Deliberately no libghostty / Bevy / GUI deps here. This crate is the
# headless half of the terminal session daemon: it owns the PTY +
# subprocess and serves bytes over a Unix socket. The editor's GUI
# crate (`jim_app`) depends on this one for the protocol types.

[dependencies]
serde = { version = "1", features = ["derive"] }
bincode = { version = "2", features = ["serde"] }
nix = { version = "0.31", features = ["term", "fs", "signal", "process", "user", "ioctl", "poll"] }
libc = "0.2"

[lib]
name = "jim_daemon"
path = "src/lib.rs"

[[bin]]
name = "terminal-daemon"
path = "src/bin/terminal-daemon.rs"
