[package]
name = "jim_diff"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
diff_core = { path = "../diff-core" }
jim_pane = { path = "../jim-pane" }
jim_style = { path = "../jim-style" }
# Reused for tree-sitter Rust syntax highlighting (Highlighter,
# HighlightKind, SyntaxPalette) so diff lines colorize exactly like the
# editor pane.
jim_editor = { path = "../jim-editor" }
ropey = "1.6.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bevy = { version = "0.19", default-features = false, features = [
    "2d",
    "system_font_discovery",
    "x11",
    "wayland",
] }

[lib]
name = "jim_diff"
path = "src/lib.rs"
