[package]
name = "jim_style"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
jim_pane = { path = "../jim-pane" }
# WGSL parsing for the dynamic shader-introspection layer. Bevy already
# pulls naga as a transitive dep; declaring it directly lets us call
# `naga::front::wgsl::parse_str` to discover the user's shader struct
# fields at load time. Version pinned to whatever Bevy 0.18 is using.
naga = { version = "29", features = ["wgsl-in"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytemuck = { version = "1", features = ["derive"] }
# Parse each bundled font's cmap so the registry knows which glyphs it
# can render (drives per-glyph font fallback). Matched to Bevy's
# transitive ttf-parser version to avoid a duplicate.
ttf-parser = "0.25"
# funct VM — theme files (`theme.ft`), style presets, and the widget
# host fns all evaluate through funct. Replaced funct across jim-style.
funct = "0.1"
# File-watch theme.ft + shaders/*.wgsl edits in per-project asset dirs.
# AssetServer handles WGSL hot-reload itself; we use notify only for the
# funct file (which isn't an asset).
notify = { version = "8", default-features = false, features = ["macos_fsevent"] }
bevy = { version = "0.19", default-features = false, features = [
    "2d",
    "system_font_discovery",
    "x11",
    "wayland",
] }

[lib]
name = "jim_style"
path = "src/lib.rs"
