[package]
name = "jim_widget"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
glaze = { path = "../glaze" }
jim_pane = { path = "../jim-pane" }
jim_style = { path = "../jim-style" }
jim_editor = { path = "../jim-editor" }
claude-bus-bevy = { path = "../claude-bus-bevy" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
clap = { version = "4", features = ["derive"] }
# PNG/JPEG decoding for widget sprite paths.
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
# Layout engine — same one bevy_ui uses. Provides flexbox + grid +
# block layout. We feed it the Element tree, get back computed
# (x, y, width, height) per node, and render from those.
taffy = { version = "0.9", default-features = false, features = [
    "std",
    "block_layout",
    "flexbox",
    "grid",
] }
# Rhai scripting for hot-reloadable in-process widgets. `sync` makes the
# Engine + AST Send so they can live in Bevy resources/components;
# `serde` lets us serde_json::Value <-> rhai::Dynamic so widgets can
# return frames as Rhai maps that deserialize into protocol::Element.
rhai = { version = "1.21", features = ["sync", "serde"] }
notify = { version = "8", default-features = false, features = ["macos_fsevent"] }
bevy = { version = "0.18", default-features = false, features = [
    "2d",
    "x11",
    "wayland",
] }

[dev-dependencies]
# The Style Lab generator (style-muse) emits protocol-shaped JSON; the
# muse_pack test pins the two crates' serde shapes together.
jim_inference = { path = "../jim-inference" }

[lib]
name = "jim_widget"
path = "src/lib.rs"

[[bin]]
name = "widget"
path = "src/bin/widget.rs"

[[bin]]
name = "atelier"
path = "src/bin/atelier.rs"

[[bin]]
name = "glaze_demo"
path = "src/bin/glaze_demo.rs"

[[bin]]
name = "glaze_shader_demo"
path = "src/bin/glaze_shader_demo.rs"

[[bin]]
name = "glaze_gallery"
path = "src/bin/glaze_gallery.rs"

[[bin]]
name = "glaze_ui"
path = "src/bin/glaze_ui.rs"

[[bin]]
name = "widget-snapshot"
path = "src/bin/snapshot.rs"
