[package]
name = "jim_widget"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
glaze = { path = "../glaze" }
jim_pane = { path = "../jim-pane" }
jim_style = { path = "../jim-style" }
jim_editor = { path = "../jim-editor" }
claude-bus-bevy = { path = "../claude-bus-bevy" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
# pid-liveness for the agent-roster staleness sweep (msgbus.rs).
libc = "0.2"
clap = { version = "4", features = ["derive"] }
# PNG/JPEG decoding for widget sprite paths.
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
# Layout engine — same one bevy_ui uses. Provides flexbox + grid +
# block layout. We feed it the Element tree, get back computed
# (x, y, width, height) per node, and render from those.
taffy = { version = "0.9", default-features = false, features = [
    "std",
    "block_layout",
    "flexbox",
    "grid",
] }
# funct — the embeddable VM replacing funct for in-process widgets. Its
# reified VM (start/run/step over an owned VmState) is what lets a widget
# handler be paused and time-sliced mid-execution; funct cannot. Path dep
# (same out-of-repo practice as the symlinked datalog widgets) until funct
# is published.
funct = "0.1"
# Standalone syntax highlighting for the `highlight` funct host fn (the
# diff/code-review widget). Same grammars the editor pane uses, but driven
# as a one-shot pure call from the widget worker thread (no Bevy).
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-json = "0.24"
notify = { version = "8", default-features = false, features = ["macos_fsevent"] }
bevy = { version = "0.18", default-features = false, features = [
    "2d",
    "x11",
    "wayland",
] }
# Native audio capture for the audio-recorder widget. cpal runs the input
# stream on its own realtime thread (CoreAudio), so recording quality is
# fully decoupled from GUI/worker load; hound writes the WAV. Exposed to
# funct widgets as the audio_* host fns (see src/audio.rs).
cpal = "0.15"
hound = "3.5"

# macOS CoreText system-font cascade for widget text: when no bundled font
# covers a codepoint, ask the OS which installed font does and load it, so
# widgets render ANY Unicode (same approach jim-terminal uses for the TTY).
[target.'cfg(target_os = "macos")'.dependencies]
core-text = "21"
core-foundation = "0.10"

[dev-dependencies]
# The Style Lab generator (style-muse) emits protocol-shaped JSON; the
# muse_pack test pins the two crates' serde shapes together.
jim_inference = { path = "../jim-inference" }

[lib]
name = "jim_widget"
path = "src/lib.rs"

[[bin]]
name = "widget"
path = "src/bin/widget.rs"

[[bin]]
name = "atelier"
path = "src/bin/atelier.rs"

[[bin]]
name = "glaze_demo"
path = "src/bin/glaze_demo.rs"

[[bin]]
name = "glaze_shader_demo"
path = "src/bin/glaze_shader_demo.rs"

[[bin]]
name = "glaze_gallery"
path = "src/bin/glaze_gallery.rs"

[[bin]]
name = "glaze_ui"
path = "src/bin/glaze_ui.rs"

[[bin]]
name = "widget-snapshot"
path = "src/bin/snapshot.rs"
