[package]
name = "jimctl"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jim_daemon = { path = "../jim-daemon" }
jim_bus = { path = "../jim-bus" }
jim_lsp = { path = "../jim-lsp" }
libc = "0.2"
tungstenite = { version = "0.24", default-features = false, features = ["handshake"] }

[[bin]]
name = "jimctl"
path = "src/main.rs"
